# Libre-SimulIDE

./: CMakeLists.txt  SimulIDE.pro
src/: main.cpp  mainwindow.cpp  mainwindow.h  simuapi_apppath.cpp  utils.h
src/gpsim/: CMakeLists.txt  protocol.cc
src/gui/: CMakeLists.txt  ramtable.cpp
src/gui/QPropertyEditor/: EnumProperty.h  Property.cpp  QPropertyEditorWidget.h  QPropertyModel.cpp  QPropertyModel.h  QVariantDelegate.cpp
src/gui/circuitwidget/: chip.cpp  chip.h  circuit.cpp  circuit.h  circuitview.cpp  circuitwidget.cpp  circuitwidget.h  component.h  connectorline.cpp  itemlibrary.cpp  itemlibrary.h  node.cpp  node.h  pin.cpp  pin.h  subcircuit.h  subpackage.cpp  subpackage.h
src/gui/circuitwidget/components/: memdata.h
src/gui/circuitwidget/components/active/: diode.h  mux_analog.cpp  volt_reg.h
src/gui/circuitwidget/components/logic/: bcdto7s.h  bcdtodec.h  buffer.h  bus.h  dectobcd.h  gate.h  i2cram.h  i2ctoparallel.h
src/gui/circuitwidget/components/mcu/: mcucomponent.cpp  mcucomponent.h  mcucomponentpin.h  piccomponentpin.cpp  serialport.h  serialterm.h  sr04.h
src/gui/circuitwidget/components/meters/: amperimeter.h  oscope.h  probe.h  voltimeter.h
src/gui/circuitwidget/components/other/: image.cpp  image.h  textcomponent.cpp  textcomponent.h
src/gui/circuitwidget/components/outputs/: audio_out.cpp  audio_out.h  hd44780.h  ks0108.h  led.h  ledbar.cpp  ledbase.h  ledmatrix.cpp  ledmatrix.h  pcd8544.h  servo.h  sevensegment.cpp  sevensegment.h  ssd1306.h  stepper.cpp  stepper.h  ws2812.h
src/gui/circuitwidget/components/passive/: elcapacitor.h  potentiometer.h  resistor.h  resistordip.cpp
src/gui/circuitwidget/components/sources/: clock-base.h  currsource.h  ground.h  logicinput.h  rail.h  voltsource.h  wavegen.h
src/gui/circuitwidget/components/switches/: keypad.h  mech_contact.h  push.h  push_base.h  relay_base.h  switch.h  switch_base.h  switchdip.cpp  switchdip.h
src/gui/componentselector/: componentselector.cpp  compplugindialog.cpp  compplugindialog.h  ui_compplugin.h
src/gui/editorwidget/: b16asmdebugger.cpp  codeeditor.cpp  editorwindow.cpp  highlighter.h  inodebugger.cpp
src/gui/editorwidget/findreplacedialog/: findreplace_global.h  findreplaceform.cpp  findreplaceform.h  ui_findreplacedialog.h  ui_findreplaceform.h
src/gui/filebrowser/: filewidget.cpp
src/gui/oscopewidget/: oscopewidget.h  renderoscope.cpp
src/gui/plotterwidget/: plotterwidget.h
src/gui/terminalwidget/: outpaneltext.h  terminalwidget.cpp  terminalwidget.h
src/simavr/: CMakeLists.txt
src/simulator/: CMakeLists.txt  circmatrix.h  e-element.h  e-node.h  e-pin.h  e-source.h  simulator.cpp  simulator.h
src/simulator/elements/: e-logic_device.h  e-pn.h
src/simulator/elements/active/: e-bjt.h  e-diode.h  e-mosfet.h  e-mux_analog.h  e-op_amp.h  e-volt_reg.h
src/simulator/elements/logic/: e-adc.h  e-bcdto7s.h  e-bcdtodec.h  e-bincounter.h  e-bus.h  e-dac.h  e-dectobcd.h  e-demux.h  e-flipflopd.h  e-flipflopjk.h  e-fulladder.h  e-function.cpp  e-function.h  e-gate.h  e-i2c.h  e-latch_d.h  e-lm555.h  e-memory.h  e-mux.h  e-shiftreg.h
src/simulator/elements/passive/: e-capacitor.h  e-inductor.h  e-resistor.h
src/simulator/elements/processors/: baseprocessor.cpp  baseprocessor.h
